--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,66 +1,81 @@
 :root {
-	--main-bg: #3f3f3f;
-	--panel-bg: #1e1e1e;
-	--primary-color: #ff249d;
-	--primary-color-hover: #ff5cb6;
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
+	--font-1: "Bona Nova SC";
+	--font-2: "Faculty Glyphic";
+	--font-3: "Itim";
+	--font-4: "Montserrat";
+	--font-5: "Raleway";
+	--main-bg: #222;
+	--panel-bg: #444;
+	--input-bg: #333;
+	--shadow-1: rgba(130, 100, 154, 0.8);
 	font-weight: 400;
-	font-size: 24px;
-	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
+	color-scheme: dark dark;
 	background-color: var(--main-bg);
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+
+	--highlight-1: #3bf5ff;
+	--highlight-2: #ac1ee9;
+	--highlight-1a: #5c3bff;
+	--highlight-2a: #e91e76;
+	--lowlight-1a: #ff1515;
+	--lowlight-2a: #ffee00;
 }
 #root {
-	height: 100%;
+	height: 100vh;
 	overflow: hidden;
 }
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-	font-family: Inter;
+	font-family: var(--font-5), serif;
 }
 
 body,
 html {
-	height: 100%;
+	height: 100vh;
 	overflow: hidden;
+	display: flex;
+	flex-direction: column;
 }
 
 button {
+	font-family: var(--font-4), serif;
 	padding: 5px 10px;
-	font-size: 16px;
+	max-width: 120px;
 	cursor: pointer;
-	grid-row: 4 / 5;
-	grid-column: span 3;
-	font-size: 20px;
+	font-size: 16px;
 	position: relative;
-	border: 6px solid transparent;
-	border-radius: 10px;
-	font-weight: 100;
+	border: 1px solid transparent;
+	border-radius: 5px;
+	font-weight: 400;
 	background-color: transparent;
+	color: #bbb;
+}
+button:disabled {
+	opacity: 0.5;
+	cursor: not-allowed;
 }
 button::after {
 	content: "";
 	position: absolute;
-	top: -6px;
-	left: -6px;
+	top: -1.5px;
+	left: -1.5px;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(179deg, #3bf5ff, #ac1ee9) border-box;
-	mask: linear-gradient(white, rgb(255, 255, 255)) padding-box,
-		linear-gradient(white, white);
+	background: linear-gradient(179deg, var(--highlight-1), var(--highlight-2))
+		border-box;
+	mask: linear-gradient(white, white) padding-box, linear-gradient(white, white);
 	mask-composite: exclude;
 	border-radius: inherit;
 	border: inherit;
+	border-style: inherit;
+}
+button:disabled::after {
+	background: linear-gradient(90deg, rgb(234, 255, 0), red) border-box;
+	animation: pulse-disabled 1s infinite;
 }
 button:hover {
-	box-shadow: 0px 0px 14px 4px rgba(0, 208, 255, 0.8);
+	box-shadow: 0px 0px 14px 4px var(--shadow-1);
 }
 
 @media (prefers-color-scheme: light) {
@@ -72,313 +87,129 @@ button:hover {
 		background-color: var(--main-bg);
 	}
 }
-
+textarea,
+input {
+	border-radius: 7.5px;
+	font-family: var(--font-4), serif;
+	font-weight: 300;
+	background-color: var(--panel-bg);
+	resize: none;
+	padding: 10px;
+}
 /* animation pulse */
 @keyframes pulse {
 	0% {
-		background: linear-gradient(0deg, #5c3bff, #e91e76);
+		background: linear-gradient(0deg, var(--highlight-1a), var(--highlight-2a));
 		transform: scale(1);
 	}
-	1% {
-		background: linear-gradient(3.6deg, #5c3bff, #e91e76);
-	}
-	2% {
-		background: linear-gradient(7.2deg, #5c3bff, #e91e76);
-	}
-	3% {
-		background: linear-gradient(10.8deg, #5c3bff, #e91e76);
-	}
-	4% {
-		background: linear-gradient(14.4deg, #5c3bff, #e91e76);
-	}
-	5% {
-		background: linear-gradient(18deg, #5c3bff, #e91e76);
-	}
-	6% {
-		background: linear-gradient(21.6deg, #5c3bff, #e91e76);
-	}
-	7% {
-		background: linear-gradient(25.2deg, #5c3bff, #e91e76);
-	}
-	8% {
-		background: linear-gradient(28.8deg, #5c3bff, #e91e76);
-	}
-	9% {
-		background: linear-gradient(32.4deg, #5c3bff, #e91e76);
-	}
 	10% {
-		background: linear-gradient(36deg, #5c3bff, #e91e76);
-	}
-	11% {
-		background: linear-gradient(39.6deg, #5c3bff, #e91e76);
-	}
-	12% {
-		background: linear-gradient(43.2deg, #5c3bff, #e91e76);
-	}
-	13% {
-		background: linear-gradient(46.8deg, #5c3bff, #e91e76);
-	}
-	14% {
-		background: linear-gradient(50.4deg, #5c3bff, #e91e76);
-	}
-	15% {
-		background: linear-gradient(54deg, #5c3bff, #e91e76);
-	}
-	16% {
-		background: linear-gradient(57.6deg, #5c3bff, #e91e76);
-	}
-	17% {
-		background: linear-gradient(61.2deg, #5c3bff, #e91e76);
-	}
-	18% {
-		background: linear-gradient(64.8deg, #5c3bff, #e91e76);
-	}
-	19% {
-		background: linear-gradient(68.4deg, #5c3bff, #e91e76);
+		background: linear-gradient(
+			36deg,
+			var(--highlight-1a),
+			var(--highlight-2a)
+		);
 	}
 	20% {
-		background: linear-gradient(72deg, #5c3bff, #e91e76);
-	}
-	21% {
-		background: linear-gradient(75.6deg, #5c3bff, #e91e76);
-	}
-	22% {
-		background: linear-gradient(79.2deg, #5c3bff, #e91e76);
-	}
-	23% {
-		background: linear-gradient(82.8deg, #5c3bff, #e91e76);
-	}
-	24% {
-		background: linear-gradient(86.4deg, #5c3bff, #e91e76);
-	}
-	25% {
-		background: linear-gradient(90deg, #5c3bff, #e91e76);
-	}
-	26% {
-		background: linear-gradient(93.6deg, #5c3bff, #e91e76);
-	}
-	27% {
-		background: linear-gradient(97.2deg, #5c3bff, #e91e76);
-	}
-	28% {
-		background: linear-gradient(100.8deg, #5c3bff, #e91e76);
-	}
-	29% {
-		background: linear-gradient(104.4deg, #5c3bff, #e91e76);
+		background: linear-gradient(
+			72deg,
+			var(--highlight-1a),
+			var(--highlight-2a)
+		);
 	}
 	30% {
-		background: linear-gradient(108deg, #5c3bff, #e91e76);
-	}
-	31% {
-		background: linear-gradient(111.6deg, #5c3bff, #e91e76);
-	}
-	32% {
-		background: linear-gradient(115.2deg, #5c3bff, #e91e76);
-	}
-	33% {
-		background: linear-gradient(118.8deg, #5c3bff, #e91e76);
-	}
-	34% {
-		background: linear-gradient(122.4deg, #5c3bff, #e91e76);
-	}
-	35% {
-		background: linear-gradient(126deg, #5c3bff, #e91e76);
-	}
-	36% {
-		background: linear-gradient(129.6deg, #5c3bff, #e91e76);
-	}
-	37% {
-		background: linear-gradient(133.2deg, #5c3bff, #e91e76);
-	}
-	38% {
-		background: linear-gradient(136.8deg, #5c3bff, #e91e76);
-	}
-	39% {
-		background: linear-gradient(140.4deg, #5c3bff, #e91e76);
+		background: linear-gradient(
+			108deg,
+			var(--highlight-1a),
+			var(--highlight-2a)
+		);
 	}
 	40% {
-		background: linear-gradient(144deg, #5c3bff, #e91e76);
-	}
-	41% {
-		background: linear-gradient(147.6deg, #5c3bff, #e91e76);
-	}
-	42% {
-		background: linear-gradient(151.2deg, #5c3bff, #e91e76);
-	}
-	43% {
-		background: linear-gradient(154.8deg, #5c3bff, #e91e76);
-	}
-	44% {
-		background: linear-gradient(158.4deg, #5c3bff, #e91e76);
-	}
-	45% {
-		background: linear-gradient(162deg, #5c3bff, #e91e76);
-	}
-	46% {
-		background: linear-gradient(165.6deg, #5c3bff, #e91e76);
-	}
-	47% {
-		background: linear-gradient(169.2deg, #5c3bff, #e91e76);
-	}
-	48% {
-		background: linear-gradient(172.8deg, #5c3bff, #e91e76);
-	}
-	49% {
-		background: linear-gradient(176.4deg, #5c3bff, #e91e76);
+		background: linear-gradient(
+			144deg,
+			var(--highlight-1a),
+			var(--highlight-2a)
+		);
 	}
 	50% {
-		background: linear-gradient(180deg, #5c3bff, #e91e76);
-		transform: scale(1.02);
-	}
-	51% {
-		background: linear-gradient(183.6deg, #5c3bff, #e91e76);
-	}
-	52% {
-		background: linear-gradient(187.20000000000002deg, #5c3bff, #e91e76);
-	}
-	53% {
-		background: linear-gradient(190.8deg, #5c3bff, #e91e76);
-	}
-	54% {
-		background: linear-gradient(194.4deg, #5c3bff, #e91e76);
-	}
-	55% {
-		background: linear-gradient(198deg, #5c3bff, #e91e76);
-	}
-	56% {
-		background: linear-gradient(201.6deg, #5c3bff, #e91e76);
-	}
-	57% {
-		background: linear-gradient(205.20000000000002deg, #5c3bff, #e91e76);
-	}
-	58% {
-		background: linear-gradient(208.8deg, #5c3bff, #e91e76);
-	}
-	59% {
-		background: linear-gradient(212.4deg, #5c3bff, #e91e76);
+		background: linear-gradient(
+			180deg,
+			var(--highlight-1a),
+			var(--highlight-2a)
+		);
+		transform: scale(0.95);
 	}
 	60% {
-		background: linear-gradient(216deg, #5c3bff, #e91e76);
-	}
-	61% {
-		background: linear-gradient(219.6deg, #5c3bff, #e91e76);
-	}
-	62% {
-		background: linear-gradient(223.20000000000002deg, #5c3bff, #e91e76);
-	}
-	63% {
-		background: linear-gradient(226.8deg, #5c3bff, #e91e76);
-	}
-	64% {
-		background: linear-gradient(230.4deg, #5c3bff, #e91e76);
-	}
-	65% {
-		background: linear-gradient(234deg, #5c3bff, #e91e76);
-	}
-	66% {
-		background: linear-gradient(237.6deg, #5c3bff, #e91e76);
-	}
-	67% {
-		background: linear-gradient(241.20000000000002deg, #5c3bff, #e91e76);
-	}
-	68% {
-		background: linear-gradient(244.8deg, #5c3bff, #e91e76);
-	}
-	69% {
-		background: linear-gradient(248.4deg, #5c3bff, #e91e76);
+		background: linear-gradient(
+			216deg,
+			var(--highlight-1a),
+			var(--highlight-2a)
+		);
 	}
 	70% {
-		background: linear-gradient(252deg, #5c3bff, #e91e76);
-	}
-	71% {
-		background: linear-gradient(255.6deg, #5c3bff, #e91e76);
-	}
-	72% {
-		background: linear-gradient(259.2deg, #5c3bff, #e91e76);
-	}
-	73% {
-		background: linear-gradient(262.8deg, #5c3bff, #e91e76);
-	}
-	74% {
-		background: linear-gradient(266.40000000000003deg, #5c3bff, #e91e76);
-	}
-	75% {
-		background: linear-gradient(270deg, #5c3bff, #e91e76);
-	}
-	76% {
-		background: linear-gradient(273.6deg, #5c3bff, #e91e76);
-	}
-	77% {
-		background: linear-gradient(277.2deg, #5c3bff, #e91e76);
-	}
-	78% {
-		background: linear-gradient(280.8deg, #5c3bff, #e91e76);
-	}
-	79% {
-		background: linear-gradient(284.40000000000003deg, #5c3bff, #e91e76);
+		background: linear-gradient(
+			252deg,
+			var(--highlight-1a),
+			var(--highlight-2a)
+		);
 	}
 	80% {
-		background: linear-gradient(288deg, #5c3bff, #e91e76);
-	}
-	81% {
-		background: linear-gradient(291.6deg, #5c3bff, #e91e76);
-	}
-	82% {
-		background: linear-gradient(295.2deg, #5c3bff, #e91e76);
-	}
-	83% {
-		background: linear-gradient(298.8deg, #5c3bff, #e91e76);
-	}
-	84% {
-		background: linear-gradient(302.40000000000003deg, #5c3bff, #e91e76);
-	}
-	85% {
-		background: linear-gradient(306deg, #5c3bff, #e91e76);
-	}
-	86% {
-		background: linear-gradient(309.6deg, #5c3bff, #e91e76);
-	}
-	87% {
-		background: linear-gradient(313.2deg, #5c3bff, #e91e76);
-	}
-	88% {
-		background: linear-gradient(316.8deg, #5c3bff, #e91e76);
-	}
-	89% {
-		background: linear-gradient(320.40000000000003deg, #5c3bff, #e91e76);
+		background: linear-gradient(
+			288deg,
+			var(--highlight-1a),
+			var(--highlight-2a)
+		);
 	}
 	90% {
-		background: linear-gradient(324deg, #5c3bff, #e91e76);
-	}
-	91% {
-		background: linear-gradient(327.6deg, #5c3bff, #e91e76);
-	}
-	92% {
-		background: linear-gradient(331.2deg, #5c3bff, #e91e76);
-	}
-	93% {
-		background: linear-gradient(334.8deg, #5c3bff, #e91e76);
-	}
-	94% {
-		background: linear-gradient(338.40000000000003deg, #5c3bff, #e91e76);
-	}
-	95% {
-		background: linear-gradient(342deg, #5c3bff, #e91e76);
-	}
-	96% {
-		background: linear-gradient(345.6deg, #5c3bff, #e91e76);
-	}
-	97% {
-		background: linear-gradient(349.2deg, #5c3bff, #e91e76);
-	}
-	98% {
-		background: linear-gradient(352.8deg, #5c3bff, #e91e76);
-	}
-	99% {
-		background: linear-gradient(356.40000000000003deg, #5c3bff, #e91e76);
+		background: linear-gradient(
+			324deg,
+			var(--highlight-1a),
+			var(--highlight-2a)
+		);
 	}
 	100% {
-		background: linear-gradient(360deg, #5c3bff, #e91e76);
+		background: linear-gradient(
+			360deg,
+			var(--highlight-1a),
+			var(--highlight-2a)
+		);
+		transform: scale(1);
+	}
+}
+@keyframes pulse-disabled {
+	0% {
+		background: linear-gradient(0deg, var(--lowlight-1a), var(--lowlight-2a));
+		transform: scale(1);
+	}
+	10% {
+		background: linear-gradient(36deg, var(--lowlight-1a), var(--lowlight-2a));
+	}
+	20% {
+		background: linear-gradient(72deg, var(--lowlight-1a), var(--lowlight-2a));
+	}
+	30% {
+		background: linear-gradient(108deg, var(--lowlight-1a), var(--lowlight-2a));
+	}
+	40% {
+		background: linear-gradient(144deg, var(--lowlight-1a), var(--lowlight-2a));
+	}
+	50% {
+		background: linear-gradient(180deg, var(--lowlight-1a), var(--lowlight-2a));
+		transform: scale(0.95);
+	}
+	60% {
+		background: linear-gradient(216deg, var(--lowlight-1a), var(--lowlight-2a));
+	}
+	70% {
+		background: linear-gradient(252deg, var(--lowlight-1a), var(--lowlight-2a));
+	}
+	80% {
+		background: linear-gradient(288deg, var(--lowlight-1a), var(--lowlight-2a));
+	}
+	90% {
+		background: linear-gradient(324deg, var(--lowlight-1a), var(--lowlight-2a));
+	}
+	100% {
+		background: linear-gradient(360deg, var(--lowlight-1a), var(--lowlight-2a));
 		transform: scale(1);
 	}
 }
