--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -106,20 +106,20 @@ button:disabled::after {
 	animation: pulse-disabled 1s infinite;
 }
 
-.underbutton {
+/* .underbutton {
 	background: green;
 	color: pink;
-}
-.sibling:hover + div > button.underbutton::after {
+} */
+/* .sibling:hover + div > button.underbutton::after {
 	background: pink;
 	color: green;
-}
-button:hover {
-	color: black;
-	/* background-color: white; */
-	background-color: var(--button-hover-bg);
-	/* box-shadow: 0px 0px 14px 4px var(--shadow-1); */
-}
+} */
+/* button:hover { */
+/* color: black; */
+/* background-color: white; */
+/* background-color: var(--button-hover-bg); */
+/* box-shadow: 0px 0px 14px 4px var(--shadow-1); */
+/* } */
 
 @media (prefers-color-scheme: light) {
 	:root {
