--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,8 @@
 	font-style: normal;
 	font-weight: normal;
 	src: local("Friz Quadrata Regular OS"),
-		url("/fonts/friz-quadrata-regular-os-5870333951e7c.woff") format("woff");
+		url("/assets/fonts/friz-quadrata-regular-os-5870333951e7c.woff")
+			format("woff");
 }
 
 @font-face {
@@ -11,7 +12,8 @@
 	font-style: normal;
 	font-weight: normal;
 	src: local("Friz Quadrata Bold Italic OS"),
-		url("/fonts/friz-quadrata-bold-italic-os-5870341205e0f.woff") format("woff");
+		url("/assets/fonts/friz-quadrata-bold-italic-os-5870341205e0f.woff")
+			format("woff");
 }
 :root {
 	--font-1: "Friz Quadrata Regular OS";
@@ -25,7 +27,6 @@
 	--shadow-1: rgba(130, 100, 154, 0.8);
 	font-weight: 400;
 	color-scheme: light dark;
-	background-color: var(--main-bg);
 	--button-hover-bg: #abcdef;
 	--highlight-1: #3bf5ff;
 	--highlight-2: #ac1ee9;
@@ -33,6 +34,7 @@
 	--highlight-2a: #e91e76;
 	--lowlight-1a: #ff1515;
 	--lowlight-2a: #ffee00;
+	--highdark-1: rgb(0, 0, 0);
 	--disabled-border-gradient-1: #ff1515;
 	--disabled-border-gradient-2: #ffee00;
 	--highlight-3: #440000;
@@ -63,49 +65,6 @@ html {
 	flex-direction: column;
 }
 
-button {
-	font-family: var(--font-4), serif;
-	padding: 5px 10px;
-	max-width: 120px;
-	cursor: pointer;
-	font-size: 16px;
-	position: relative;
-	border: 1px solid transparent;
-	border-radius: 5px;
-	font-weight: 400;
-	background-color: transparent;
-	color: var(--text-color);
-}
-button:disabled {
-	opacity: 0.5;
-	cursor: not-allowed;
-}
-button::after {
-	content: "";
-	position: absolute;
-	top: -1.5px;
-	left: -1.5px;
-	width: 100%;
-	height: 100%;
-	background: linear-gradient(179deg, var(--highlight-1), var(--highlight-2))
-		border-box;
-	mask: linear-gradient(white, white) padding-box, linear-gradient(white, white);
-	mask-composite: exclude;
-	border-radius: inherit;
-	border: inherit;
-	border-style: inherit;
-}
-
-button:disabled::after {
-	background: linear-gradient(
-			90deg,
-			var(--disabled-border-gradient-1),
-			var(--disabled-border-gradient-2)
-		)
-		border-box;
-	animation: pulse-disabled 1s infinite;
-}
-
 /* .underbutton {
 	background: green;
 	color: pink;
@@ -127,14 +86,14 @@ button:disabled::after {
 		--panel-bg: darkturquoise;
 		--input-bg: #e7e7e7;
 		--shadow-1: rgba(216, 0, 0, 0.8);
-		background-color: var(--main-bg);
 		--button-hover-bg: #a4f2a0;
-		--highlight-1: #6d00c6;
+		--highlight-1: #b050ff;
 		--highlight-2: #e91e76;
 		--highlight-1a: #ff6c3b;
 		--highlight-2a: #1ee936;
 		--lowlight-1a: #ff1515;
 		--lowlight-2a: #ffee00;
+		--highdark-1: rgb(205, 254, 255);
 		--disabled-border-gradient-1: #ff1515;
 		--disabled-border-gradient-2: #ffee00;
 		--highlight-3: #440000;
