--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -344,3 +344,9 @@ select option:hover::after {
 		transform: scale(1);
 	}
 }
+
+@media screen and (max-width: 500px) {
+	* {
+		overflow: unset !important;
+	}
+}
